Refacto product summaries #search
