# swagger/v1/swagger.json
@@ -1072,15 +1072,24 @@
                     "example": "bordeaux",
                     "description": "Territory or city slug."
                   },
+                  "perimeter": {
+                    "type": "string",
+                    "enum": [
+                      "none",
+                      "city",
+                      "department",
+                      "country"
+                    ]
+                  },
                   "q": {
                     "type": "string",
                     "example": "Chaussures",
                     "description": "Query for search."
                   },
-                  "categories": {
+                  "category": {
                     "type": "string",
                     "example": "homme",
-                    "description": "Categories slugs concatened with double \"_\" if more than one."
+                    "description": "Category slug"
                   },
                   "prices": {
                     "type": "string",
@@ -1093,31 +1102,35 @@
                     "example": false
                   },
                   "services": {
-                    "type": "string",
-                    "example": "livraison-par-la-poste__livraison-france-metropolitaine",
-                    "description": "Service slugs concatened with double \"_\" if more than one."
+                    "type": "array",
+                    "items": {
+                      "type": "string"
+                    },
+                    "example": [
+                      "livraison-par-la-poste",
+                      "livraison-france-metropolitaine"
+                    ],
+                    "description": "Service slugs."
                   },
                   "sortBy": {
                     "type": "string",
                     "enum": [
+                      "highest-score",
                       "price-asc",
                       "price-desc",
-                      "newest"
+                      "newest",
+                      "position",
+                      "name-asc",
+                      "name-desc",
+                      "random"
                     ]
                   },
                   "page": {
                     "type": "string",
                     "example": "1",
                     "description": "Search page number."
-                  },
-                  "more": {
-                    "type": "boolean",
-                    "description": "Increase research perimeter scope"
                   }
-                },
-                "required": [
-                  "location"
-                ]
+                }
               }
             }
           }
@@ -5395,7 +5408,7 @@
   },
   "servers": [
     {
-      "url": "https://stingy-advice-gw.aws-euc1.cloud-ara.tyk.io/catalog-dev"
+      "url": "http://localhost:3000/"
     }
   ],
   "components": {
@@ -6188,6 +6201,11 @@
             "type": "string",
             "description": "Search page number.",
             "example": "2"
+          },
+          "totalPages": {
+            "type": "string",
+            "description": "Total search page number.",
+            "example": "15"
           }
         }
       },
